Updated contact form and navigation links
- Added functional contact form with PHP backend
- Updated contact information for Kolkata
- Added Google Maps embed for Kolkata
- Updated navigation links in index.html
- Changed branding to Indian Free Water

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <button class="btn btn-primary btn-md-square d-flex flex-shrink-0 mb-3 mb-lg-0 rounded-circle me-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
-                    <a href="" class="btn btn-primary rounded-pill d-inline-flex flex-shrink-0 py-2 px-4">Order Now</a>
+                    <a href="contact.html" class="btn btn-primary rounded-pill d-inline-flex flex-shrink-0 py-2 px-4">Order Now</a>
                 </div>
             </nav>
       <!-- Carousel Start -->
@@ -95,8 +95,8 @@
                             Advertise directly to customers through Indian Free Water. With every sip, your brand gains visibility in grocery stores, events, and corporate partnerships.
                         </p>
                         <div class="carousel-caption-1-content-btn fadeInLeft animated" data-animation="fadeInLeft" data-delay="1.7s" style="animation-delay: 1.7s;">
-                            <a class="btn btn-primary rounded-pill flex-shrink-0 py-3 px-5 me-2" href="#">Partner with Us</a>
-                            <a class="btn btn-secondary rounded-pill flex-shrink-0 py-3 px-5 ms-2" href="#">Learn More</a>
+                            <a class="btn btn-primary rounded-pill flex-shrink-0 py-3 px-5 me-2" href="contact.html">Partner with Us</a>
+                            <a class="btn btn-secondary rounded-pill flex-shrink-0 py-3 px-5 ms-2" href="about.html">Learn More</a>
                         </div>
                     </div>
                 </div>
